<resources>
    <string name="app_name">Quest For Glory</string>
    <string name="quest_for_glory_description">You are sitting in office, quite an ordinary day. Nothing was pointing out that this will be most important day for hero in his rising up to glory.\n\nSuddenly, out of nowhere, mail appears in your inbox.\nWhat will you do?</string>
    <string name="quest_for_glory_ichigo_kurosaki_ichigo">Ignore the mail. You are not a hero…\n(go to Ichigo, Kurosaki Ichigo)</string>
    <string name="quest_for_glory_hero_in_its_making">This is what I’ve been waiting for, I will open the CASE\n(go to Hero in its making)</string>
    <string name="ichigo_kurosaki_ichigo_label">Ichigo, Kurosaki Ichigo</string>
    <string name="ichigo_kurosaki_ichigo_description">You pierced sword through one ninja\'s chest, by corner of the eye, you noticed 4 more coming from behind. You thrown shurikens just to get some time, knowing that it can’t do any harm to this hard cored ninjas. But that was enough, you grabbed first ninja for arm and used him as shield against piercing attack from…\nAnd then you woke up…</string>
    <string name="ichigo_kurosaki_ichigo_problem"> It was about time, another day finished… You can go\n(go to Problem?)</string>
    <string name="hero_in_its_making_label">Hero in its making</string>
    <string name="hero_in_its_making_description">Suddenly… Le wild Dakinsa appears asking to open the CASE.</string>
    <string name="hero_in_its_making_le_wild_dakinsa">Le wild Dakinsa</string>
    <string name="hero_in_its_making_problem">Great! I have better things to do. Let him open it\n(go to Problem?)</string>
    <string name="hero_in_its_making_clark_gable">No! Sometimes man has to do what man has to do\n(go to Clark Gable)</string>
    <string name="problem_label">Problem?</string>
    <string name="problem_description">Leave those poor fools doing all the hard work. Why don’t I just sit down and start reading new hero daily magazine, about other fools doing the hard work. You would rather sit and enjoy pint of beer…</string>
    <string name="problem_quest_for_glory">End of story.\nDon’t like this?\n(go to Quest For Glory)</string>
    <string name="clark_gable_label">Clark Gable</string>
    <string name="clark_gable_description">As you embark on quest of great… no… EPIC proportions, you must choose how to deal with upcoming menace…</string>
    <string name="clark_gable_send_castle">Seems I can do it… after all…\n(go to Sand Castle)</string>
    <string name="clark_gable_hero_party">I can\'t do it after all… I need to search for quest companions\n(go to Hero Party)</string>
    <string name="clark_gable_loshmi_the_gray">Who cares… I am Tier 1 hero anyway…\n(go to Loshmi The Gray)</string>
    <string name="sand_castle_label">Sand Castle</string>
    <string name="sand_castle_description">You made it… CASE is solved, and you can bask in your glory.\n\nFrom town to town, your name will be singed, young virgins will repeat your name in their dreams, and jealous husbands will curse you because after tale of your deeds they will never be top male in their wife’s hearts.</string>
    <string name="hero_party_label">Hero Party</string>
    <string name="hero_party_description">As you enter smoky old dusky tavern, you can see several hard looking fellas, who go about their own business… Seems none of them is noticing you coming in…</string>
    <string name="hero_party_tier2">I will ask party of semi-veterans, they look capable of doing the muscle work for me.\n(go to Tier 2)</string>
    <string name="hero_party_tier3">I chose to ask veteran party… Better to have more than less.\n(go to page Tier 3)</string>
    <string name="hero_party_dacha_turkish_terror">I will ask Dakinsa… old friend from thousands battles to help me… more XP for both of us…\n(go to Dacha theTurkish terror)</string>
    <string name="loshmi_the_gray_label">LoshMi The Gray</string>
    <string name="loshmi_the_gray_description">As you expose your problem to LoshMi, you can see hint of his smile, as would you look upon child who would try to fight his way with wooden sword against old Oak tree…</string>
    <string name="loshmi_the_gray_soothsayer">Young one, if you want to hear my advice, go far to the north, where mountains touch the sky, where clouds dance among eyes of ones who watch it. There will you find Pedja the oracle\n(go to page Soothsayer)</string>
    <string name="loshmi_the_gray_bridge_of_doom">I help you will… if you do thou quest for me\n(go to Bridge of doom)</string>
    <string name="alea_iacta_est_label">Alea iacta est</string>
    <string name="alea_iacta_est_description">After you said number 2, Milan the EarthShaker  answered number 2, and since it was correct answer in ancient game of Asocijacije, he won. Therefore he was happy and decided to help you with your quest…</string>
    <string name="alea_iacta_est_problem">(go to Problem?)</string>
    <string name="battle_of_heavens_label">Battle of heavens</string>
    <string name="battle_of_heavens_description">A wild conversation bursts out, what hero will fare best, who will win, where to go, what items to buy, what skills to build, who will support who, who will carry, who will feed… the troops.</string>
    <string name="battle_of_heavens_wheel_of_time">And you forgot about CASE at all, before you know it, it’s 17.00h, tavern closing time. (go to page Wheel of time)</string>
    <string name="boys_will_be_boys_label">Boys will be boys</string>
    <string name="boys_will_be_boys_description">The girl on which he is using his ancient and wise seducing methods, is a lady of great beauty, only seen once in the lifetime, that you cry out in cold nights and whose name will never make your lips forget them.</string>
    <string name="boys_will_be_boys_different_tastes">Stop overreacting, she is not that good at all… moderate at best…\n(go to Different tastes)</string>
    <string name="boys_will_be_boys_grab_the_chance">Wow… she does look like a bomb… or will be in 5 years\n(go to page Grab the chance while you can)</string>
    <string name="cheese_in_ears_label">Cheese in ears</string>
    <string name="cheese_in_ears_description">As you approach song becomes more and more louder… you feed like your head will burst, and the pain makes you forget what was your quest in first place, you must make save check in order to resist the spell.</string>
    <string name="cheese_in_ears_i_am_alive">You rolled the dice for resist check and you rolled 5\n(go to I am alive, I am alive)</string>
    <string name="cheese_in_ears_this_is_the_end">You rolled the dice for resist check and you rolled 3\n(go to This is the end… my only friend)</string>
    <string name="bridge_of_doom_label">Bridge of doom</string>
    <string name="bridge_of_doom_description">LoshMi the mage eyed you up and down as considering will you be up for the task… then he decides that you may be Tier 1 hero, but there is something heroic inside you… so he gives you choices…</string>
    <string name="bridge_of_doom_rare_beast_of_becka">Go in to the wilds of Winner, and hunt me some food…if you survive that is…\n(go to rare beast of Becka)</string>
    <string name="bridge_of_doom_hatori_hanzo">I have no time for you, go to Milan theEarthShaker and ask for his advice…\n(go to Hatori Hanzo)</string>
    <string name="dacha_turkish_terror_label">Turkish Terror</string>
    <string name="dacha_turkish_terror_description">Dakinsha, young and naive hero wannabe, is skulking around you, waiting to get chance for his piece of glory. After you gave him chance to become famous, he turns his all power into solving CASE.</string>
    <string name="dacha_turkish_terror_sand_castle">He tries… harder and harder, and somehow he miraculously does it\n(go to Sand castle)</string>
    <string name="dacha_turkish_terror_wheel_of_time">After hours of trying, he fails to open the CASE, His weapon must be under VPN curse, and therefore unable to open CASE in this realm…\n(go to Wheel of time)</string>
    <string name="different_tastes_label">Different tastes</string>
    <string name="different_tastes_description">Goran the pervy sage is willing to help you, because maiden was not worth saving, after 5–6 consulting’s with Tier 3 group, you are ready to embark on glorious quest of solving the CASE.</string>
    <string name="different_tastes_sand_castle">(go to Sand Castle)</string>
    <string name="disaster_in_its_making_label">Disaster in its making</string>
    <string name="disaster_in_its_making_description">Only fools would dare to interrupt Milan the EarthShaker while playing Slagalica with beautiful Milka Canić… In a flashing of en eye, you were whipped out from this world, last thing you heard was 四方八方手裏剣 (All sorts of throwing shuriken :D)</string>
    <string name="disaster_in_its_making_wheel_of_time">(go to Wheel of Time)</string>
    <string name="do_or_be_done_label">Do or be done</string>
    <string name="do_or_be_done_description">After hearing that it was all a lie, Goran bursts into rage and starts… dancing!? Though the dance was somewhat smooth and catchy, you couldn\'t stand that amount of rhythm, it was like river flushing to your face, with its wild currents. So you chose bravely to… retreat… for now…</string>
    <string name="do_or_be_done_run_to_the_hills">(go to Run to the hills)</string>
    <string name="eat_or_be_eaten_label">Eat or be eaten</string>
    <string name="eat_or_be_eaten_description">You fought bravely. Exchanging hit by hit with monster, and fight lasted deep into night, with last ounce of power you tried to throw axe between its eyes…</string>
    <string name="eat_or_be_eaten_hunter_or_pray">You rolled 5 (go to Hunter or pray?)</string>
    <string name="eat_or_be_eaten_solo_mid">You rolled 6 (go to Solo mid?)</string>
    <string name="goran_the_pervy_sage_label">Goran the Pervy Sage</string>
    <string name="goran_the_pervy_sage_description">Goran the sage is sitting in his high chair… looking very busy, but you already feel aura of wisdom spreading around him, like it suits to someone who spent so many years studying and in search of knowledge. As you come near him you see that:</string>
    <string name="goran_the_pervy_sage_boys_will_be_boys">He is on Tagallicious checking the young girls online\n(go to Boys will be boys)</string>
    <string name="goran_the_pervy_sage_iwo_jima">He is reading the last copy of Sage’s popular magazine, called Kurir\n(go to Letters form Iwo Jima)</string>
    <string name="grab_the_chance_label">Grab the chance</string>
    <string name="grab_the_chance_description">You manage to convince the Sage to help you, using flattery, and sweet talk. After a while, he is in a good mood, he takes on himself to ask noble warriors from Tier 3, and you are free to go</string>
    <string name="grab_the_chance_sand_castle">(go to page Sand Castle)</string>
    <string name="hatori_hanzo_label">Hatori Hanzo</string>
    <string name="hatori_hanzo_description">A warrior is playing dice with some shady characters. At first, you try to wait, but soon you realize this will take to long to wait, so you chose to make your first move.</string>
    <string name="hatori_hanzo_alea_iacta_est">You try to attract his attention and roll the dice for Charisma check. You rolled 2\n(go to page Alea Iacta Est)</string>
    <string name="hatori_hanzo_disaster_in_its_making">You try to attract his attention and roll the dice for Charisma check. You rolled 4\n(go to Disaster in its making)</string>
    <string name="hunter_or_pray_label">Hunter or pray</string>
    <string name="hunter_or_pray_description">You failed miserably, and was promptly eaten. Maybe you were third grade hero, but you were first class meal on Pragnje’s table…</string>
    <string name="hunter_or_pray_wheel_of_time">(go to Wheel of time)</string>
    <string name="i_am_alive_label">I am alive</string>
</resources>