<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hero_in_its_making_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/hero_in_its_making_le_wild_dakinsa"
            android:src="@drawable/le_wild_dakinsa" />

        <Button
            android:id="@+id/problemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/hero_in_its_making_problem"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/hero_in_its_making_problem"
            android:src="@drawable/problem_problem" />

        <Button
            android:id="@+id/clarkGableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/hero_in_its_making_clark_gable"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/hero_in_its_making_clark_gable"
            android:src="@drawable/clark_gable" />
    </LinearLayout>

</ScrollView>