<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hero_party_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000" />

        <Button
            android:id="@+id/tier2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/hero_party_tier2"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/tier2"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/tier3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/hero_party_tier3"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/tier3"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/dachaTurkishTerrorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/hero_party_dacha_turkish_terror"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/dacha_turkish_terror"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</ScrollView>