<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/clark_gable_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000" />

        <Button
            android:id="@+id/sendCasteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/clark_gable_send_castle"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/clark_gable_send_castle"
            android:src="@drawable/send_castle" />

        <Button
            android:id="@+id/heroPartyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/clark_gable_hero_party"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/clark_gable_hero_party"
            android:src="@drawable/hero_party" />

        <Button
            android:id="@+id/loshmiTheGreatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/clark_gable_loshmi_the_gray"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/clark_gable_loshmi_the_gray"
            android:src="@drawable/loshmi_the_gray" />
    </LinearLayout>

</ScrollView>