<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/loshmi_the_gray_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000" />

        <Button
            android:id="@+id/soothsayerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/loshmi_the_gray_soothsayer"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/soothsayer"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/bridgeOfDoomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/loshmi_the_gray_bridge_of_doom"
            android:textAllCaps="false"
            android:textColor="#000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bridge_of_doom"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</ScrollView>